Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignIntegerBoolObjWrapped.quorum
class main
    action Main
        Boolean bool
        bool:setValue(true)
        integer i = bool
    end
end